; ModuleID = '/home/carl/AnghaBench/esp-idf/components/soc/esp32/extr_rtc_clk.c_rtc_clk_32k_enable_common.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/soc/esp32/extr_rtc_clk.c_rtc_clk_32k_enable_common.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RTC_IO_XTAL_32K_PAD_REG = common dso_local global i32 0, align 4
@RTC_IO_X32P_RDE = common dso_local global i32 0, align 4
@RTC_IO_X32P_RUE = common dso_local global i32 0, align 4
@RTC_IO_X32N_RUE = common dso_local global i32 0, align 4
@RTC_IO_X32N_RDE = common dso_local global i32 0, align 4
@RTC_IO_X32N_FUN_IE = common dso_local global i32 0, align 4
@RTC_IO_X32P_FUN_IE = common dso_local global i32 0, align 4
@RTC_IO_X32N_MUX_SEL = common dso_local global i32 0, align 4
@RTC_IO_X32P_MUX_SEL = common dso_local global i32 0, align 4
@RTC_IO_DAC_XTAL_32K = common dso_local global i32 0, align 4
@RTC_IO_DRES_XTAL_32K = common dso_local global i32 0, align 4
@RTC_IO_DBIAS_XTAL_32K = common dso_local global i32 0, align 4
@RTC_IO_XPD_XTAL_32K_M = common dso_local global i32 0, align 4
@RTC_IO_TOUCH_CFG_REG = common dso_local global i32 0, align 4
@RTC_IO_TOUCH_PAD8_DAC = common dso_local global i32 0, align 4
@RTC_IO_TOUCH_PAD8_DAC_S = common dso_local global i32 0, align 4
@RTC_IO_TOUCH_PAD8_REG = common dso_local global i32 0, align 4
@RTC_IO_TOUCH_PAD9_REG = common dso_local global i32 0, align 4
@RTC_IO_TOUCH_PAD9_TIE_OPT_M = common dso_local global i32 0, align 4
@RTC_IO_TOUCH_PAD9_XPD_M = common dso_local global i32 0, align 4
@RTC_IO_TOUCH_XPD_BIAS_M = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32)* @rtc_clk_32k_enable_common to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rtc_clk_32k_enable_common(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @RTC_IO_XTAL_32K_PAD_REG, align 4
  %8 = load i32, i32* @RTC_IO_X32P_RDE, align 4
  %9 = load i32, i32* @RTC_IO_X32P_RUE, align 4
  %10 = or i32 %8, %9
  %11 = load i32, i32* @RTC_IO_X32N_RUE, align 4
  %12 = or i32 %10, %11
  %13 = load i32, i32* @RTC_IO_X32N_RDE, align 4
  %14 = or i32 %12, %13
  %15 = load i32, i32* @RTC_IO_X32N_FUN_IE, align 4
  %16 = or i32 %14, %15
  %17 = load i32, i32* @RTC_IO_X32P_FUN_IE, align 4
  %18 = or i32 %16, %17
  %19 = call i32 @CLEAR_PERI_REG_MASK(i32 %7, i32 %18)
  %20 = load i32, i32* @RTC_IO_XTAL_32K_PAD_REG, align 4
  %21 = load i32, i32* @RTC_IO_X32N_MUX_SEL, align 4
  %22 = load i32, i32* @RTC_IO_X32P_MUX_SEL, align 4
  %23 = or i32 %21, %22
  %24 = call i32 @SET_PERI_REG_MASK(i32 %20, i32 %23)
  %25 = load i32, i32* @RTC_IO_XTAL_32K_PAD_REG, align 4
  %26 = load i32, i32* @RTC_IO_DAC_XTAL_32K, align 4
  %27 = load i32, i32* %4, align 4
  %28 = call i32 @REG_SET_FIELD(i32 %25, i32 %26, i32 %27)
  %29 = load i32, i32* @RTC_IO_XTAL_32K_PAD_REG, align 4
  %30 = load i32, i32* @RTC_IO_DRES_XTAL_32K, align 4
  %31 = load i32, i32* %5, align 4
  %32 = call i32 @REG_SET_FIELD(i32 %29, i32 %30, i32 %31)
  %33 = load i32, i32* @RTC_IO_XTAL_32K_PAD_REG, align 4
  %34 = load i32, i32* @RTC_IO_DBIAS_XTAL_32K, align 4
  %35 = load i32, i32* %6, align 4
  %36 = call i32 @REG_SET_FIELD(i32 %33, i32 %34, i32 %35)
  %37 = load i32, i32* @RTC_IO_XTAL_32K_PAD_REG, align 4
  %38 = load i32, i32* @RTC_IO_XPD_XTAL_32K_M, align 4
  %39 = call i32 @SET_PERI_REG_MASK(i32 %37, i32 %38)
  ret void
}

declare dso_local i32 @CLEAR_PERI_REG_MASK(i32, i32) #1

declare dso_local i32 @SET_PERI_REG_MASK(i32, i32) #1

declare dso_local i32 @REG_SET_FIELD(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
